native/include/alexandria_ffi.h

/**
 * FFI status codes returned by index operations.
 */
#define INDEX_OK 0
#define INDEX_ERR_INVALID_INPUT 1
#define INDEX_ERR_UNAUTHORIZED 2
#define INDEX_ERR_NOT_INITIALIZED 3
#define INDEX_ERR_OTHER 4
/**
 * FFI status codes returned by file operations (UC-04+). Deliberately
 * separate from `INDEX_*` so a future use case can grow either set without
 * colliding; `FILE_OK == INDEX_OK == 0` by convention.
 */
#define FILE_OK 0
#define FILE_ERR_INVALID_INPUT 1
#define FILE_ERR_UNAUTHORIZED 2
#define FILE_ERR_NOT_INITIALIZED 3
#define FILE_ERR_NOT_FOUND 4
#define FILE_ERR_INVALID_STATE 5
#define FILE_ERR_DISK 6
#define FILE_ERR_INTEGRITY 7
#define FILE_ERR_OTHER 9
/**
 * FFI status codes returned by watchlist operations (UC-20+). Deliberately
 * separate from `BOOKMARK_*` — per the convention above — so watchlist use
 * cases can grow their own set without colliding; `WATCHLIST_OK ==
 * BOOKMARK_OK == 0` by convention.
 */
#define WATCHLIST_OK 0
#define WATCHLIST_ERR_INVALID_INPUT 1
#define WATCHLIST_ERR_UNAUTHORIZED 2
#define WATCHLIST_ERR_NOT_INITIALIZED 3
#define WATCHLIST_ERR_NOT_FOUND 4
#define WATCHLIST_ERR_INVALID_STATE 5
#define WATCHLIST_ERR_OTHER 9
/**
 * FFI status codes returned by reading list operations (UC-26+).
 * Deliberately separate from `WATCHLIST_*` — per the convention above — so
 * reading-list use cases can grow their own set without colliding;
 * `READING_LIST_OK == WATCHLIST_OK == 0` by convention.
 */
#define READING_LIST_OK 0
#define READING_LIST_ERR_INVALID_INPUT 1
#define READING_LIST_ERR_UNAUTHORIZED 2
#define READING_LIST_ERR_NOT_INITIALIZED 3
#define READING_LIST_ERR_NOT_FOUND 4
#define READING_LIST_ERR_INVALID_STATE 5
#define READING_LIST_ERR_OTHER 9
/**
 * FFI status codes returned by run-status operations (UC-42 / FR-FC-28).
 * Deliberately separate from `INDEX_*`, `FILE_*`, `COLLECTION_*`, `PLAYBACK_*`,
 * and `AUTH_*` — per the convention established above — so this surface can
 * grow independently; `RUN_OK == INDEX_OK == 0` by convention.
 */
#define RUN_OK 0
/**
 * Result of starting an index run. `run_id` is a NUL-terminated UUID string
 * on success (empty on failure).
 */
typedef struct IndexStartResult {
  int status;
  char run_id[37];
} IndexStartResult;
/**
 * Result of `alexandria_file_edit_metadata` (UC-04). On success `status` is
 * `FILE_OK` and `json` is a NUL-terminated JSON string of the `FileMetadata`
 * body — byte-for-byte the same shape HTTP returns from
 * `PATCH /v1/files/{uuid}/metadata` (FR-FC-24 / NFR-09). On failure `json`
 * is NULL and `status` carries the mapped error code. The caller must free
 * `json` with `alexandria_free_string`.
 */
typedef struct FileMetadataResult {
  int status;
  char *json;
} FileMetadataResult;
/**
 * Result of `alexandria_files_list` and `alexandria_file_get_by_uuid` (UC-03).
 * On success `status` is `FILE_OK` and `json` is a NUL-terminated JSON string
 * — byte-for-byte the same shape HTTP returns from `GET /v1/files` (a JSON
 * array of `File` records) or `GET /v1/files/{uuid}` (a `FileView` object),
 * so the FFI and HTTP surfaces agree modulo key ordering (parity, FR-FC-24 /
 * NFR-09). On failure `json` is NULL and `status` carries the mapped error
 * code. The caller must free `json` with `alexandria_free_string`.
 */
typedef struct FileJsonResult {
  int status;
  char *json;
} FileJsonResult;
/**
 * JSON result for the playback functions. `json` is NULL on error and
 * `status` carries the mapped code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct PlaybackJsonResult {
  int status;
  char *json;
} PlaybackJsonResult;
/**
 * Result of `alexandria_collection_create` (UC-10). On success `status` is
 * `COLLECTION_OK` and `json` is a NUL-terminated JSON string of the
 * `Collection` body — byte-for-byte the same shape HTTP returns from
 * `POST /v1/collections` (FR-FC-24 / NFR-09). On failure `json` is NULL and
 * `status` carries the mapped error code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct CollectionJsonResult {
  int status;
  char *json;
} CollectionJsonResult;
/**
 * Result of `alexandria_watchlist_create` (UC-20). On success `status` is
 * `WATCHLIST_OK` and `json` is a NUL-terminated JSON string of the
 * `Watchlist` body — byte-for-byte the same shape HTTP returns from `POST
 * /v1/watchlists` (FR-FC-24 / NFR-09). On failure `json` is NULL and
 * `status` carries the mapped error code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct WatchlistJsonResult {
  int status;
  char *json;
} WatchlistJsonResult;
/**
 * Result of `alexandria_reading_list_create` (UC-26). On success `status`
 * is `READING_LIST_OK` and `json` is a NUL-terminated JSON string of the
 * `ReadingList` body — byte-for-byte the same shape HTTP returns from
 * `POST /v1/reading-lists` (FR-FC-24 / NFR-09). On failure `json` is NULL
 * and `status` carries the mapped error code. The caller must free `json`
 * with `alexandria_free_string`.
 */
typedef struct ReadingListJsonResult {
  int status;
  char *json;
} ReadingListJsonResult;
/**
 * Result of `alexandria_index_run_status_json` (UC-42). On success `status`
 * is `RUN_OK` and `json` is a NUL-terminated JSON string of the `CatalogRun`
 * body — byte-for-byte the same shape HTTP returns from
 * `GET /v1/index/runs/{runId}` (FR-FC-24 / NFR-09). On failure `json` is
 * NULL and `status` carries the mapped error code. The caller must free
 * `json` with `alexandria_free_string`.
 */
typedef struct RunJsonResult {
  int status;
  char *json;
} RunJsonResult;
/**
 * Edit a file's type-specific metadata (UC-04 / FR-FC-14..18).
 *
 * `uuid` is the file's public UUID string; `json_patch` is the JSON body
 * (the `SubtypeMetadata` enum, internally tagged by `type`) that HTTP would
 * send. The function deserializes it, calls the same `EditMetadataHandler`
 * the HTTP route uses, and on success serializes the returned `FileMetadata`
 * back to JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key
 * ordering (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct FileMetadataResult alexandria_file_edit_metadata(const char *uuid,
                                                        const char *json_patch,
                                                        const char *token);
/**
 * List/query files filtered by type and lifecycle state (UC-03 / FR-FC-12).
 *
 * `json_filters` is a JSON string `{"type":"audio","state":"all"}` (empty
 * string or NULL for defaults). The function deserializes it, calls the same
 * `BrowseFilesHandler` the HTTP route uses, and on success serializes the
 * returned `Vec<File>` back to a JSON array — so the FFI and HTTP surfaces
 * agree byte-for-byte modulo key ordering (parity, FR-FC-24 / NFR-09).
 * `token` is the bearer auth token.
 */
struct FileJsonResult alexandria_files_list(const char *json_filters, const char *token);
/**
 * Get a single file's metadata by its public UUID (UC-03 / FR-FC-13).
 *
 * `uuid` is the file's public UUID string. The function calls the same
 * `BrowseFilesHandler::get_by_uuid` the HTTP route uses, and on success
 * serializes the returned `FileView` back to JSON — the same shape HTTP
 * returns from `GET /v1/files/{uuid}` (parity, FR-FC-24 / NFR-09). `token`
 * is the bearer auth token.
 */
struct FileJsonResult alexandria_file_get_by_uuid(const char *uuid, const char *token);
/**
 * Create a named watchlist for tracking video consumption (UC-20 /
 * FR-WL-01).
 *
 * `json_body` is the JSON body HTTP would send (`name`). The function
 * deserializes it, calls the same `CreateWatchlistHandler` the HTTP route
 * uses, and on success serializes the returned `Watchlist` back to JSON —
 * so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct WatchlistJsonResult alexandria_watchlist_create(const char *json_body, const char *token);
/**
 * Create a named reading list for tracking book/comic consumption (UC-26 /
 * FR-RL-01).
 *
 * `json_body` is the JSON body HTTP would send (`name`). The function
 * deserializes it, calls the same `CreateReadingListHandler` the HTTP
 * route uses, and on success serializes the returned `ReadingList` back to
 * JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key
 * ordering (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct ReadingListJsonResult alexandria_reading_list_create(const char *json_body,
                                                            const char *token);
/**
 * Report an index or re-index run's status and outcome (UC-42 / FR-FC-28).
 * `run_id` is the id `alexandria_index_start` or
 * `alexandria_index_refresh_start` returned. On success `json` carries the
 * same body the HTTP `GET /v1/index/runs/{runId}` route returns (FR-FC-24).
 *
 * Returns `RUN_ERR_NOT_FOUND` for an id naming no run (AF-01),
 * `RUN_ERR_UNAUTHORIZED` for an unauthenticated caller (AF-02), and
 * `RUN_ERR_INVALID_INPUT` when `run_id` is not a uuid.
 */
struct RunJsonResult alexandria_index_run_status_json(const char *run_id, const char *token);
/**
 * Free a string previously returned by an FFI accessor.
 *
 * # Safety
 *
 * `ptr` must be null, or a pointer returned by one of this library's
 * accessors and not yet freed. Passing anything else — a pointer this library
 * did not produce, or one already freed — is undefined behaviour. Declared
 * `unsafe` because that obligation is the caller's and cannot be checked here.
 */
void alexandria_free_string(char *ptr);