lib/core/bindings/alexandria_bindings.dart


  external ffi.Pointer<ffi.Char> json;

  static ffi.Pointer<CollectionJsonResult> $allocate(
    ffi.Allocator $allocator, {
    required int status,
    required ffi.Pointer<ffi.Char> json,
  }) => $allocator<CollectionJsonResult>()
    ..ref.status = status
    ..ref.json = json;
}

const int FILE_ERR_DISK = 6;

const int FILE_ERR_INTEGRITY = 7;

const int FILE_ERR_INVALID_INPUT = 1;

const int FILE_ERR_INVALID_STATE = 5;

const int FILE_ERR_NOT_FOUND = 4;

const int FILE_ERR_NOT_INITIALIZED = 3;

const int FILE_ERR_OTHER = 9;

const int FILE_ERR_UNAUTHORIZED = 2;

const int FILE_OK = 0;

/// Result of `alexandria_files_list` and `alexandria_file_get_by_uuid` (UC-03).
/// On success `status` is `FILE_OK` and `json` is a NUL-terminated JSON string
/// — byte-for-byte the same shape HTTP returns from `GET /v1/files` (a JSON
/// array of `File` records) or `GET /v1/files/{uuid}` (a `FileView` object),
/// so the FFI and HTTP surfaces agree modulo key ordering (parity, FR-FC-24 /
/// NFR-09). On failure `json` is NULL and `status` carries the mapped error
/// code. The caller must free `json` with `alexandria_free_string`.
final class FileJsonResult extends ffi.Struct {
  @ffi.Int()
  external int status;

  external ffi.Pointer<ffi.Char> json;

  static ffi.Pointer<FileJsonResult> $allocate(
    ffi.Allocator $allocator, {
    required int status,
    required ffi.Pointer<ffi.Char> json,
  }) => $allocator<FileJsonResult>()
    ..ref.status = status
    ..ref.json = json;
}

/// Result of `alexandria_file_edit_metadata` (UC-04). On success `status` is
/// `FILE_OK` and `json` is a NUL-terminated JSON string of the `FileMetadata`
/// body — byte-for-byte the same shape HTTP returns from
/// `PATCH /v1/files/{uuid}/metadata` (FR-FC-24 / NFR-09). On failure `json`
/// is NULL and `status` carries the mapped error code. The caller must free
/// `json` with `alexandria_free_string`.
final class FileMetadataResult extends ffi.Struct {
  @ffi.Int()
  external int status;

  external ffi.Pointer<ffi.Char> json;

  static ffi.Pointer<FileMetadataResult> $allocate(
    ffi.Allocator $allocator, {
    required int status,
    required ffi.Pointer<ffi.Char> json,
  }) => $allocator<FileMetadataResult>()
    ..ref.status = status
    ..ref.json = json;
}

const int INDEX_ERR_INVALID_INPUT = 1;

const int INDEX_ERR_NOT_INITIALIZED = 3;

const int INDEX_ERR_OTHER = 4;

const int INDEX_ERR_UNAUTHORIZED = 2;

const int INDEX_OK = 0;

/// Result of starting an index run. `run_id` is a NUL-terminated UUID string
/// on success (empty on failure).
final class IndexStartResult extends ffi.Struct {
  @ffi.Int()
  external int status;

  @ffi.Array.multi([37])
  external ffi.Array<ffi.Char> run_id;
}

/// JSON result for the playback functions. `json` is NULL on error and
/// `status` carries the mapped code. The caller must free `json` with
/// `alexandria_free_string`.
final class PlaybackJsonResult extends ffi.Struct {
  @ffi.Int()
  external int status;

  external ffi.Pointer<ffi.Char> json;

  static ffi.Pointer<PlaybackJsonResult> $allocate(
    ffi.Allocator $allocator, {
    required int status,
    required ffi.Pointer<ffi.Char> json,
  }) => $allocator<PlaybackJsonResult>()
    ..ref.status = status
    ..ref.json = json;
}

const int READING_LIST_ERR_INVALID_INPUT = 1;

const int READING_LIST_ERR_INVALID_STATE = 5;

const int READING_LIST_ERR_NOT_FOUND = 4;

const int READING_LIST_ERR_NOT_INITIALIZED = 3;

const int READING_LIST_ERR_OTHER = 9;

const int READING_LIST_ERR_UNAUTHORIZED = 2;

const int READING_LIST_OK = 0;

/// Result of `alexandria_reading_list_create` (UC-26). On success `status`
/// is `READING_LIST_OK` and `json` is a NUL-terminated JSON string of the
/// `ReadingList` body — byte-for-byte the same shape HTTP returns from
/// `POST /v1/reading-lists` (FR-FC-24 / NFR-09). On failure `json` is NULL
/// and `status` carries the mapped error code. The caller must free `json`
/// with `alexandria_free_string`.
final class ReadingListJsonResult extends ffi.Struct {
  @ffi.Int()
  external int status;

  external ffi.Pointer<ffi.Char> json;

  static ffi.Pointer<ReadingListJsonResult> $allocate(
    ffi.Allocator $allocator, {
    required int status,
    required ffi.Pointer<ffi.Char> json,
  }) => $allocator<ReadingListJsonResult>()
    ..ref.status = status
    ..ref.json = json;
}

/// Result of `alexandria_index_run_status_json` (UC-42). On success `status`
/// is `RUN_OK` and `json` is a NUL-terminated JSON string of the `CatalogRun`
/// body — byte-for-byte the same shape HTTP returns from
/// `GET /v1/index/runs/{runId}` (FR-FC-24 / NFR-09). On failure `json` is
/// NULL and `status` carries the mapped error code. The caller must free
/// `json` with `alexandria_free_string`.
final class RunJsonResult extends ffi.Struct {
  @ffi.Int()
  external int status;

  external ffi.Pointer<ffi.Char> json;

  static ffi.Pointer<RunJsonResult> $allocate(
    ffi.Allocator $allocator, {
    required int status,
    required ffi.Pointer<ffi.Char> json,
  }) => $allocator<RunJsonResult>()
    ..ref.status = status
    ..ref.json = json;
}

const int WATCHLIST_ERR_INVALID_INPUT = 1;

const int WATCHLIST_ERR_INVALID_STATE = 5;

const int WATCHLIST_ERR_NOT_FOUND = 4;

const int WATCHLIST_ERR_NOT_INITIALIZED = 3;

const int WATCHLIST_ERR_OTHER = 9;

const int WATCHLIST_ERR_UNAUTHORIZED = 2;

const int WATCHLIST_OK = 0;

/// Result of `alexandria_watchlist_create` (UC-20). On success `status` is
/// `WATCHLIST_OK` and `json` is a NUL-terminated JSON string of the
/// `Watchlist` body — byte-for-byte the same shape HTTP returns from `POST
/// /v1/watchlists` (FR-FC-24 / NFR-09). On failure `json` is NULL and
/// `status` carries the mapped error code. The caller must free `json` with
/// `alexandria_free_string`.
final class WatchlistJsonResult extends ffi.Struct {
  @ffi.Int()
  external int status;

  external ffi.Pointer<ffi.Char> json;

  static ffi.Pointer<WatchlistJsonResult> $allocate(
    ffi.Allocator $allocator, {
    required int status,
    required ffi.Pointer<ffi.Char> json,
  }) => $allocator<WatchlistJsonResult>()
    ..ref.status = status
    ..ref.json = json;
}
